<resources>
    <string name="app_name">HSL AR</string>
    <string name="chooseLine">choose line</string>
    <string name="busline">line number</string>
    <string name="check">check</string>
    <string name="vehicleInfo">vehicleInfo</string>
    <string name="speed">speed</string>
    <string name="lat">lat</string>
    <string name="longi">longi</string>
    <string name="odo">odo</string>
    <string name="door_status">door status</string>
    <string name="stop">stop</string>
    <string name="event">event</string>
    <string name="heading">heading</string>
    <string name="sort">sort</string>
    <string name="closest">closest</string>
    <string name="you">You</string>
    <string name="hsl">Hsl</string>
    <string name="dist_meter">meters</string>

    <string name="rent_title">Rent a bike</string>
    <string name="retutn_title">Return a bike</string>
    <string name="scooter_title">Find a scooter</string>

    <string name="access_token" translatable="false">pk.eyJ1IjoiZW0xbHQiLCJhIjoiY2sxNmN3d2l1MDJ0ejNjcGJscjI3dWpheCJ9.11koZVBLPLKsPfVwBuKaBQ</string>
    <string name="citybikes">CityBikes</string>
    <string name="distance">Distance from the stop</string>
    <string name="simple">Simple</string>
    <string name="detailed">Detailed</string>
    <string name="doorClose">Doors are closed</string>
    <string name="doorOpen">Doors are open</string>
    <string name="serviceNoti">Service Notifications</string>

    <string name="bikes_available">Bikes available:</string>
    <string name="spaces_available">Spaces available:</string>
    <string name="cb_dist">away</string>
    <string name="cb_dropoff">Drop off allowed if no space</string>
    <string name="ride_title">Find a ride</string>
    <string name="cs_button">Find a scooter</string>
    <string name="cs_pop_title">City Scooter</string>
    <string name="cs_battery">Battery left:</string>
    <string name="survey_advise">Alerts</string>
    <string name="away">meters away</string>
    <string name="kmaway">km away</string>
    <string name="maway">meters away</string>
    <string name="stops">Stops</string>

</resources>
