<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VehicleRealTimeDetailActivity"
        xmlns:mapbox="http://schemas.android.com/apk/res-auto">


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="363dp"
            android:layout_height="65dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/linearLayout">


        <TextView
                android:text=""
                android:textSize="30sp"
                android:background="@drawable/check_button_toggle_left"
                android:gravity="center"
                android:layout_width="113dp"
                android:layout_height="match_parent" android:id="@+id/busNum"/>
        <TextView
                android:text=""
                android:layout_width="120dp"
                android:background="@drawable/check_button_toggle_right"
                android:gravity="center"
                android:layout_height="match_parent" android:id="@+id/endStop"/>
        <ImageButton
                android:src="@drawable/ic_notifications_black_24dp"
                android:layout_width="0dp"
                android:background="@drawable/check_button"
                android:layout_height="match_parent" android:id="@+id/bNotification" android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="375dp"
            android:layout_height="wrap_content" android:layout_marginTop="90dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:paddingBottom="24dp"
            android:id="@+id/linearLayout3">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1">

            <TextView
                    android:text="@string/speed"
                    android:gravity="center"
                    android:background="@drawable/check_button_toggle_left"
                    android:paddingTop="7dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginBottom="3dp"
                    android:paddingBottom="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:layout_marginBottom="3dp"
                    android:textSize="16sp"
                    android:background="@drawable/check_button_toggle_left"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:gravity="center"
                    android:layout_height="wrap_content" android:text="@string/distance"/>
            <TextView
                    android:text="@string/door_status"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/check_button_toggle_left"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:gravity="center"

                    android:layout_height="wrap_content"/>
            <TextView
                    android:text="@string/stop"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:background="@drawable/check_button_toggle_left"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>


        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1">

            <TextView
                    android:text=""
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/check_button_toggle_right"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/speed"/>
            <TextView
                    android:id="@+id/dist"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/check_button_toggle_right"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:gravity="center"
                    android:layout_height="wrap_content" android:text=""/>
            <TextView
                    android:text=""
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/check_button_toggle_right"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:gravity="center"
                    android:layout_height="wrap_content" android:id="@+id/drs"/>
            <TextView
                    android:text=""
                    android:background="@drawable/check_button_toggle_right"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content" android:id="@+id/stop"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="375dp"
            android:layout_height="496dp"
            android:layout_alignTop="@+id/linearLayout3"
            android:layout_marginStart="8dp" android:layout_marginTop="191dp" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <com.mapbox.mapboxsdk.maps.MapView
                android:id="@+id/mapBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignStart="@+id/linearLayout4"
                mapbox:mapbox_cameraTargetLat="60.2193"
                mapbox:mapbox_cameraTargetLng="24.784258" mapbox:mapbox_cameraZoom="12">

        </com.mapbox.mapboxsdk.maps.MapView>

    </LinearLayout>

    <ImageButton android:layout_width="60dp" android:layout_height="wrap_content"
                 android:background="@drawable/check_button"
                 android:id="@+id/showNavi"
                 android:layout_marginLeft="277dp"
                 android:layout_marginTop="350dp"
                 android:src="@drawable/ic_dehaze_black_24dp" android:layout_weight="1"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/navigationMenu"
            android:visibility="invisible"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="115dp"
            android:layout_marginTop="310dp">


        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:background="@drawable/check_button_toggle_left"
                     android:id="@+id/bStop"
                     android:src="@drawable/ic_store_black_24dp" android:layout_weight="1"/>

        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:background="@drawable/check_button_toggle_middle"
                     android:id="@+id/bBus"
                     android:src="@drawable/ic_directions_bus_orange_24dp" android:layout_weight="1"/>

        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:background="@drawable/check_button_toggle_right"
                     android:id="@+id/bYou"
                     android:src="@drawable/ic_person_black_24dp" android:layout_weight="1"/>

    </LinearLayout>



</RelativeLayout>
